clang/test/BSC/Negative/OwnedStruct/impl-trait/impl-trait.cbs
// RUN: %clang_cc1 -verify %s

_Owned struct S { 
_Public:
  int a;
};

_Trait T { 
};

_Impl _Trait T for S;

void test1(S* sp) {
  _Trait T* t = sp;
}

void test2(S* _Owned sp) {
  _Trait T* _Owned t = sp;
} // expected-error {{field memory leak of value: `t`, t.data is leak}}

void test3(S* sp) {
  _Trait T* _Owned t = sp; // expected-error {{incompatible _Owned types, cannot cast '_Owned struct S *' to '_Trait T *_Owned'}}
}

void test4(S* _Owned sp) {
  _Trait T* t = sp; // expected-error {{incompatible _Owned types, cannot cast '_Owned struct S *_Owned' to '_Trait T *'}}
}